HighwayDataExaminer/hdx.css
/* CSS for the METAL Highway Data Examiner*/

#map {
    position: absolute;
    top: 0px;
    bottom:0px;
    width: 100%;
    right: 0px;
    overflow:hidden;
    filter: blur(6px);
    border-radius: 0;
    border: none;
    margin: 0;
    z-index: 2; 
}

.leaflet-control-scale-line {
    border-radius: 0;
}

#avStatusPanel {
    margin: 0;
    z-index: 11000;
    position: absolute;
    overflow: scroll;
    width: 400px;
    opacity: 1.0;
    display: none;

    font-family: Avenir, Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: white;
}

#avStatusTable {
    border: none;
    width: 100%;
    overflow: scroll;
    background-color: rgb(190, 235, 252);
    border-collapse: separate;
    border-spacing: 10px;
    max-width: 400px;
 
}

#avStatusTable th
{
    border: none;
    font-size: 24px;
    color: rgb(39, 78, 93);
}

.codeRow
{
    border-spacing: 0;
}

#avStatusTable td:not(.codeRow *, .pseudocode) {
    border: 2px solid black;
    border-radius: 25px;
    padding: 7px 7px 7px 13px;
    font-weight: 500;
    /* box-shadow: 5px 5px 3px black; */
}

#avStatusTable td#foundAVCPEntry
{
    padding: 7px;
}

#avStatusTable td#discoveredAVCPEntry table tbody tr td
{
    padding: 7px;
}

#avStatusTable td#discoveredAVCPEntry table tbody tr td#dotdotdot
{
    padding: 0;
}

#avStatusTable td#pseudo
{
    border: none;
    margin: 0;
    padding-top: 0;
    padding-left: 7px;
    border-spacing: 0;
    background-color: rgb(30, 179, 238);
    border: 2px solid black;
}


#avStatusTable #algorithmStatus
{
    padding: 10px;
    width: 200px;
    display: block;
    color: rgb(39, 78, 93);
    min-height: 40px;
    box-shadow: none;
    border: none;
    
}

#algorithmStatus span
{
    width: 380px;
    display: inline-block;
    
    
}

#discoveredAVCPEntry
{
    max-width: 300px;
    overflow: scroll;
    
}

#discoveredAVCPEntry span
{
    text-align: right;
}

#discoveredAVCPEntry table
{
    
    border-collapse: separate;
    border-spacing: 5px;

}

#discoveredAVCPEntry table tbody tr td
{
    border-radius: 10px;
    background-color: white;
    color: black;
    font-size: 11px;
    border: 2px solid black;
    
}

#discoveredAVCPEntry table tbody tr td#dotdotdot
{
    background-color: rgb(255, 130, 0);
    color: white;
    font-size: 20px;
    font-weight: 500;
    padding: 0;
    margin: 0;
    border: none;
    
}

#foundAVCPEntry
{
    text-align: center;
}

#foundAVCPEntry table.pathTable
{
    /*background-color: rgb(113, 88, 255);*/
    border-collapse: separate;
    border-spacing: 6px;
    border: none;
    max-width: 380px;
    margin: auto;
}

#foundAVCPEntry table.pathTable td
{
    background-color: white;
    font-size: 12px;
    padding: 3px 3px 3px 5px;
    color: black;
}

#foundAVCPEntry table.pathTable th
{
    font-size: 14px;
    color: white;
}





#map * {
    cursor:crosshair;
    
    
}

html
{
    background-color: rgb(47, 47, 47);
}

#selected {
    position: relative;
    overflow: scroll;
    display: inline-block;
    max-width: 50%;
    max-height: 85%;
    width:auto;
    height:auto;
    opacity: .95;  /* also forces stacking order */
}

#pointbox {
    visibility: hidden;
    left: 0px;
    width: 1px;
    height: 1px;
}

#options {
    visibility: hidden;
    left: 0px;
    width: 1px;
    height: 1px;
}

#showHideMenu {
    position: fixed;
    right: 10px;
    opacity: .75;  /* also forces stacking order */
}

#AlgorithmVisualization {
    visibility: hidden;
    left: 0px;
    width: 1px;
    height: 1px;
}



#pseudoTable {
    position: absolute;
    padding: 5px;
    bottom: 150px;
    overflow-y: scroll;
    max-width: 33%;
    opacity: .95;
}

#graphList {
    width:150px;
}

table.dataTable tbody td {
    padding:0px;
}

#menuIcon {
    padding: 0px;
    margin: 0px;
    top: 1px;
    position: fixed;
    display: inline-block;
    border: none;
    color: white;
}

#menuIcon:hover {
    color: lightgrey;
}

table.pseudocode {
    font-size: 9pt;
    font-family: "Courier New", Courier, monospace;
    border: 1px solid black;
    border-spacing: 0px;
    border-collapse: collapse;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5px;
    background-color: white;
    color: black;
   
}




#START td.pseudocode
{
    border: 1px solid black;
    border-radius: 0;
}

td.pseudocode {
    border: none;
    border-collapse: collapse;
    padding-top: 0;
}

tr.pseudocode {
    border: none;
    border-collapse: collapse;
    padding-top: 0;
}
/*tr.codeRow td
{
    color:rgb(129, 91, 216);
    border: none;
}*/


.highlight {
    background-color: yellow;
}
.for1{}
.for2{}
.for3{}
.if1{}
.if2{}

.box {
    display: inline-block;
    height: 20px;
    width: 20px;
    border: 2px solid;
}

#contentArea_legend{
    background-color: white;
}

#boxContainer{
    padding-left: 30px;
}



#loadDataTable {
    border: 1px solid black;	
}

#searchBox {
    width: 365px;
}





#selected {
    display: none;
}





/* centering and zindex together, based on example from 
https://stackoverflow.com/questions/19343331/how-do-i-center-an-absolutely-positioned-element
*/



.data-title:hover:after{
    opacity: 1;
    transition: all 0.1s ease 0.5s;
    visibility: visible;
    z-index: inherit;
}
.data-title:after{
        
    background-color: #00FF00;
    color: #111;
    font-size: 20px;
    padding: 1px 5px 2px 5px;
    bottom: -1.6em;
    left: 100%;
    white-space: wrap;
    box-shadow: 1px 1px 3px #222222;
    opacity: 0;
    border: 1px solid #111111;
    z-index: 99999;
    overflow: hidden;
}
.data-title{
    font-size: 11px;
    background-color: white;
    color:rgb(47, 47, 47);
    white-space: wrap;
    box-shadow: 1px 1px 3px #222222;
    opacity: 50;
    border: 1px solid rgb(47, 47, 47);
    font-family: Avenir, Arial, Helvetica, sans-serif;
    padding: 3px;
    border-radius: 10px;
}
/* ... */

